--- a/Project_1/Index.html
+++ b/Project_1/Index.html
@@ -25,7 +25,12 @@
             </div>
             <div class="form-control">
                 <label for="Password">Password</label>
-                <input type="Password" id="Password2" placeholder="Enter Password">
+                <input type="Password" id="Password" placeholder="Enter Password">
+                <small>Error Messege</small>
+            </div>
+            <div class="form-control">
+                <label for="Password">Re-Enter Password</label>
+                <input type="Password" id="Password2" placeholder="Enter Again Password">
                 <small>Error Messege</small>
             </div>
             <button>Submit</button>
