--- a/Project_1/Index.html
+++ b/Project_1/Index.html
@@ -14,23 +14,23 @@
         <form id="form" class="form">
             <h2>Sign Up</h2>
             <div class="form-control">
-                <label for="UserName">UserName</label>
-                <input type="text" id="UserName" placeholder="Enter User Name">
+                <label for="userName">UserName</label>
+                <input type="text" id="userName" placeholder="Enter User Name">
                 <small>Error Messege</small>
             </div>
             <div class="form-control">
-                <label for="Email">Email</label>
-                <input type="text" id="Email" placeholder="Enter Email">
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Enter Email">
                 <small>Error Messege</small>
             </div>
             <div class="form-control">
                 <label for="Password">Password</label>
-                <input type="Password" id="Password" placeholder="Enter Password">
+                <input type="Password" id="password" placeholder="Enter Password">
                 <small>Error Messege</small>
             </div>
             <div class="form-control">
-                <label for="Password">Re-Enter Password</label>
-                <input type="Password" id="Password2" placeholder="Enter Again Password">
+                <label for="password2">Re-Enter Password</label>
+                <input type="Password" id="password2" placeholder="Enter Again Password">
                 <small>Error Messege</small>
             </div>
             <button>Submit</button>
